--- a/src/app/components/generator/generator.component.html
+++ b/src/app/components/generator/generator.component.html
@@ -1,6 +1,6 @@
 <div class="row" style="text-align: center">
   <div class="col-md-12" style="text-align: center; ">
-    <h3>ელექტრონული ზედდებული #{{ transferToSection.addon['Left'] }}  <input type="text" [(ngModel)]="transferToSection.addon['Right']" style="border: 0px; width: 100px; display: inline-block" (ngModelChange)="change()"></h3>
+    <h3>{{name}} {{ transferToSection.addon['Left'] }} - <input type="text" [(ngModel)]="transferToSection.addon['Right']" style="border: 0px; width: 100px; display: inline-block" (ngModelChange)="change()"></h3>
   </div>
 </div>
 <div class="row">
