--- a/src/app/views/incame-operation/incame-operation.component.scss
+++ b/src/app/views/incame-operation/incame-operation.component.scss
@@ -1,4 +1,4 @@
-/deep/ app-messages {
+/deep/ app-incame-operation {
   .ui-tabmenu-nav li a {
     font-family: 'lbet-mt',sans-serif !important;
   }
