--- a/src/app/views/report/report.component.html
+++ b/src/app/views/report/report.component.html
@@ -1,1 +1,5 @@
-<app-file-uploader></app-file-uploader>
+<div class="row">
+  <div class="col-m-12 col-lg-5">
+    <p-tabMenu [model]="items" [activeItem]="items[0]" ></p-tabMenu>
+  </div>
+</div>
