--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -22,4 +22,8 @@ app-sidebar-nav-link a {
   padding-top: 10px;
 }
 
+.ui-fileupload  button {
+  margin: 0 !important;
+}
+
 // width: calc(100% - 10px);
