--- a/src/app/views/management/property/property.component.html
+++ b/src/app/views/management/property/property.component.html
@@ -4,7 +4,7 @@
     <p-tabMenu [model]="items" [activeItem]="items[0]" ></p-tabMenu>
   </div>
   <div class="col-m-12 col-lg-7">
-    <button (click)="showDialog()" *ngIf="!distributed" pButton type="button" label="ინვ. საწყობში დაბრუნება" class="ui-button-raised" style="position: absolute; right: 400px"></button> &nbsp;&nbsp;
+    <button (click)="showDialog()" *ngIf="!distributed" pButton type="button" label="ინვ. შებრუნება" class="ui-button-raised" style="position: absolute; right: 400px"></button> &nbsp;&nbsp;
     <button (click)="inventoryToBuildingDialog()" *ngIf="!distributed" pButton type="button" label="ინვ. მოძრაობა შენობებს შორის" class="ui-button-raised"  style="position: absolute; right: 100px"></button>&nbsp;&nbsp;
     <button (click)="personDialog()" *ngIf="distributed" pButton type="button" label="განპიროვნება" class="ui-button-raised"  style="position: absolute; right: 100px"></button>&nbsp;&nbsp;
     <span style="position: absolute;right: 37px;margin-top: 3px;color: #007ad9; cursor: pointer;">
@@ -104,7 +104,7 @@
 <p-dialog header="ინვენტარის საწყობში დაბრუნება" *ngIf="display" [(visible)]="display" [modal]="true" [responsive]="true" [style]="{width: '900px', minWidth: '200px'}" [minY]="500"
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
   <div style="width: 100%;height: 500px;" *ngIf="inventorReturnModel.inventarReturnGenerator">
-    <app-generator [transferToSection]="inventorReturnModel" ></app-generator>
+    <app-generator [transferToSection]="inventorReturnModel" [name]="dialogName" ></app-generator>
   </div>
   <div style="width: 100%;height: 500px;" *ngIf="!inventorReturnModel.inventarReturnGenerator">
     <div class="ui-g ui-fluid">
@@ -145,7 +145,9 @@
   <p-footer>
     <app-cart-button (removeCartItem)="removeCartItem()"></app-cart-button>
     <button style="position: absolute; left: 230px" pButton type="button" icon="pi pi-file" label="ფაილები ({{ uploadFiles.length}})" (click)="filesDialog=true"> </button>
-
+    <span style="width: 20px; margin-right: 20px" *ngIf="inventorReturnModel.inventarReturnGenerator">
+      ბოლო კოდი - {{lastCode}}
+    </span>
     <button type="button" pButton icon="pi pi-check"  *ngIf="!inventorReturnModel.inventarReturnGenerator"(click)="generateInventarReturn()" label="ზედდებულის გენერაცია"></button>
     <button type="button" pButton icon="pi pi-check"  *ngIf="inventorReturnModel.inventarReturnGenerator" (click)="activateInventarReturn()" label="ზედდებულის გააქტიურება"></button>
     <button type="button" pButton icon="pi pi-close" (click)="display=false" label="დახურვა" class="ui-button-secondary"></button>
@@ -161,7 +163,7 @@
 <p-dialog header="ინვენტარის მოძრაობა შენობებს შორის" *ngIf="inventoryToBuildingDialogShow" [(visible)]="inventoryToBuildingDialogShow" [modal]="true" [responsive]="true" [style]="{width: '900px', minWidth: '200px'}" [minY]="500"
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
   <div style="width: 100%;height: 500px;" *ngIf="inventorTransfer.generator">
-    <app-generator [transferToSection]="inventorTransfer" ></app-generator>
+    <app-generator [transferToSection]="inventorTransfer" [name]="dialogName" ></app-generator>
   </div>
   <div style="width: 100%;height: 500px;" *ngIf="!inventorTransfer.generator">
     <p-tabView (onChange)="onTabChange($event)" >
@@ -295,6 +297,9 @@
   <p-footer>
     <app-cart-button (removeCartItem)="removeCartItem()"></app-cart-button>
     <button style="position: absolute; left: 230px" pButton type="button" icon="pi pi-file" label="ფაილები ({{ uploadFiles.length}})" (click)="filesDialog=true"> </button>
+    <span style="width: 20px; margin-right: 20px" *ngIf="inventorTransfer.generator">
+      ბოლო კოდი - {{lastCode}}
+    </span>
     <button type="button" pButton icon="pi pi-check"  *ngIf="!inventorTransfer.generator" (click)="generaTeInventorTransfer()" label="ზედდებულის გენერაცია"></button>
     <button type="button" pButton icon="pi pi-check"  *ngIf="inventorTransfer.generator"  (click)="activeInventorTransfer()" label="ზედდებულის გააქტიურება"></button>
     <button type="button" pButton icon="pi pi-close" (click)="inventoryToBuildingDialogShow=false" label="დახურვა" class="ui-button-secondary"></button>
@@ -303,7 +308,7 @@
 <p-dialog header="განპიროვნება" *ngIf="personDialogShow" [(visible)]="personDialogShow" [modal]="true" [responsive]="true" [style]="{width: '900px', minWidth: '200px'}" [minY]="500"
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
   <div style="width: 100%;height: 500px;" *ngIf="forPerson.generator">
-    <app-generator [transferToSection]="forPerson" ></app-generator>
+    <app-generator [transferToSection]="forPerson"  [name]="dialogName"></app-generator>
   </div>
   <div style="width: 100%;height: 500px;" *ngIf="!forPerson.generator">
 
@@ -341,7 +346,9 @@
   <p-footer>
     <app-cart-button (removeCartItem)="removeCartItem()"></app-cart-button>
     <button style="position: absolute; left: 230px" pButton type="button" icon="pi pi-file" label="ფაილები ({{ uploadFiles.length}})" (click)="filesDialog=true"> </button>
-
+    <span style="width: 20px; margin-right: 20px" *ngIf="forPerson.generator">
+      ბოლო კოდი - {{lastCode}}
+    </span>
     <button type="button" pButton icon="pi pi-check"  *ngIf="!forPerson.generator" (click)="generateForPersonInvoice()" label="ზედდებულის გენერაცია"></button>
     <button type="button" pButton icon="pi pi-check"  *ngIf="forPerson.generator"  (click)="activeForPersonTransferInvoice()" label="ზედდებულის გააქტიურება"></button>
     <button type="button" pButton icon="pi pi-close" (click)="personDialogShow=false" label="დახურვა" class="ui-button-secondary"></button>
