--- a/src/app/views/management/warehouse/warehouse.component.html
+++ b/src/app/views/management/warehouse/warehouse.component.html
@@ -5,12 +5,13 @@
     <p-tabMenu [model]="items" [activeItem]="activeItem"></p-tabMenu>
   </div>
   <div class="buttonBox">
-    <button pButton icon="pi pi-plus"  label="მიღება" class="ui-button-success" (click)="inventorDialog()"></button> &nbsp; &nbsp;
+    <button pButton icon="pi pi-plus"  label="ინვენტარის მიღება" class="ui-button-success" (click)="inventorDialog()"></button> &nbsp; &nbsp;
+    <button pButton icon="pi pi-plus"  label="ზედ. მიღება" class="ui-button-success"></button> &nbsp; &nbsp;
     <button pButton icon="pi pi-pencil" label="რედაქტირება" class="ui-button-raised" (click)="inventorEditDialog()"></button>&nbsp;&nbsp;&nbsp;
     <button pButton icon="pi pi-search" label="ძებნა" class="ui-button-warning" (click)="inventorSearch()" *ngIf="searchBox !== true"></button>
   </div>
   <div class="buttonBox">
-    <button (click)="inventoryToBuildingDialog()" pButton type="button" label="გაცემა" icon="pi pi-arrow-up" class="ui-button-danger"></button> &nbsp;&nbsp;
+    <button (click)="inventoryToBuildingDialog()" pButton type="button" label="ინვენტარის გაცემა" icon="pi pi-arrow-up" class="ui-button-danger"></button> &nbsp;&nbsp;
     <button (click)="showDialog()" pButton type="button" label="მოძრაობა A-B" class="ui-button-raised arrow-icon"></button>&nbsp;&nbsp;
     <span class="cart">
       <fa-icon [icon]="faCartPlus"  (click)="cartDialog()" size="2x"  ></fa-icon>
@@ -147,7 +148,7 @@
 <p-dialog header="ინვენტარის მოძრაობა სექციებს შორის" *ngIf="display" [(visible)]="display" [modal]="true" [responsive]="true" [style]="{width: '900px', minWidth: '200px'}" [minY]="500"
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
   <div style="width: 100%;height: 500px;" *ngIf="transferToSectionInvoiceGenerator">
-    <app-generator  (onChangeAddon)="changeAddon($event)" [transferToSection]="transferToSection" ></app-generator>
+    <app-generator  (onChangeAddon)="changeAddon($event)" [transferToSection]="transferToSection"  [name]="dialogName"></app-generator>
   </div>
   <div style="width: 100%;height: 500px;" *ngIf="!transferToSectionInvoiceGenerator">
     <div class="ui-g ui-fluid">
@@ -188,6 +189,9 @@
   <p-footer>
     <button style="position: absolute; left: 230px" pButton type="button" icon="pi pi-file" label="ფაილები ({{ uploadFiles.length}})" (click)="filesDialog=true"> </button>
     <app-cart-button (removeCartItem)="removeCartItem()" ></app-cart-button>
+    <span style="width: 20px; margin-right: 20px" *ngIf="transferToSectionInvoiceGenerator">
+      ბოლო კოდი - {{lastCode}}
+    </span>
     <button type="button" pButton icon="pi pi-check"  *ngIf="!transferToSectionInvoiceGenerator"(click)="generaTeTransferToSection()" label="ზედდებულის გენერაცია"></button>
     <button type="button" pButton icon="pi pi-check"  *ngIf="transferToSectionInvoiceGenerator" (click)="activeTransferToSection()" label="ზედდებულის გააქტიურება"></button>
     <button type="button" pButton icon="pi pi-close" (click)="display=false" label="დახურვა" class="ui-button-secondary"></button>
@@ -205,7 +209,7 @@
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
 
   <div style="width: 100%;height: 500px;" *ngIf="inventorTransfer.generator">
-    <app-generator [transferToSection]="inventorTransfer" ></app-generator>
+    <app-generator [transferToSection]="inventorTransfer" [name]="dialogName" ></app-generator>
   </div>
   <div style="width: 100%;height: 500px;" *ngIf="!inventorTransfer.generator">
       <p-tabView (onChange)="onTabChange($event)" >
@@ -340,6 +344,9 @@
   <p-footer>
     <button style="position: absolute; left: 230px" pButton type="button" icon="pi pi-file" label="ფაილები ({{ uploadFiles.length}})" (click)="filesDialog=true"> </button>
     <app-cart-button (removeCartItem)="removeCartItem()"></app-cart-button>
+    <span style="width: 20px; margin-right: 20px" *ngIf="inventorTransfer.generator">
+      ბოლო კოდი - {{lastCode}}
+    </span>
     <button type="button" pButton icon="pi pi-check"  *ngIf="!inventorTransfer.generator" (click)="generaTeInventorTransfer()" label="ზედდებულის გენერაცია"></button>
     <button type="button" pButton icon="pi pi-check"  *ngIf="inventorTransfer.generator"  (click)="activeInventorTransfer()" label="ზედდებულის გააქტიურება"></button>
     <button type="button" pButton icon="pi pi-close" (click)="inventoryToBuildingDialogShow=false" label="დახურვა" class="ui-button-secondary"></button>
@@ -369,8 +376,26 @@
 
 <p-dialog header="საქონლის ჯგუფი" style="vertical-align: baseline" *ngIf="itemGroupDialogShow" [(visible)]="itemGroupDialogShow" [modal]="true" [responsive]="true" [style]="{width: '500px', minWidth: '200px'}" [minY]="100"
           [maximizable]="true" [baseZIndex]="10000">
-  <p-tree [value]="ItemGroup" selectionMode="single"
-          (onNodeSelect)="nodeSelect($event)" (onNodeUnselect)="nodeUnselect($event)"></p-tree>
+  <!--p-tree [value]="ItemGroup" selectionMode="single"
+          (onNodeSelect)="nodeSelect($event)" (onNodeUnselect)="nodeUnselect($event)" field></p-tree-->
+  <p-treeTable [value]="ItemGroup" [columns]="[{field: 'name', header: 'name'}]" selectionMode="single" dataKey="name"
+               (onNodeSelect)="nodeSelect($event)" (onNodeUnselect)="nodeUnselect($event)">
+    <ng-template pTemplate="header" let-columns>
+      <tr>
+        <th *ngFor="let col of columns">
+          {{col.header}}
+        </th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowNode let-rowData="rowData" let-columns="columns">
+      <tr [ttRow]="rowNode" [ttSelectableRow]="rowNode">
+        <td *ngFor="let col of columns; let i = index">
+          <p-treeTableToggler [rowNode]="rowNode" *ngIf="i == 0"></p-treeTableToggler>
+          {{rowData[col.field]}}
+        </td>
+      </tr>
+    </ng-template>
+  </p-treeTable>
   <div style="margin-top:8px">Selected Node: {{newInventor.itemGroupName ? newInventor.itemGroupName : 'none'}}</div>
 
   <p-footer>
@@ -379,7 +404,7 @@
   </p-footer>
 </p-dialog>
 
-<p-dialog header="{{inventorOperation=='edit'? 'ინვენტარის რედაქტირება': 'ინვენტარის მიღება'}}" *ngIf="inventorDialogShow" [(visible)]="inventorDialogShow" [modal]="true" [responsive]="true" [style]="{width: '1200px', minWidth: '200px'}" [minY]="500"
+<p-dialog header="{{inventorOperation=='edit'? 'ინვენტარის რედაქტირება':(inventorOperation ==='multiple')? 'პაკეტური რედაქტირება':'ინვენტარის მიღება'}}" *ngIf="inventorDialogShow" [(visible)]="inventorDialogShow" [modal]="true" [responsive]="true" [style]="{width: '1200px', minWidth: '200px'}" [minY]="500"
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
   <div class="row" style="text-align: center" *ngIf="addon !== undefined">
     <div class="col-md-12" style="text-align: center" *ngIf="frustrate">
@@ -392,7 +417,7 @@
         <p>მიღების თარიღი</p>
         <p-calendar [(ngModel)]="newInventor.date" dateFormat="dd-mm-yy" [showIcon]="true"  [ngClass]="{ 'red':if_error(formErrors,'date')?'1px solid red': '' }"></p-calendar>
       </div>
-      <div class="ui-g-12 ui-md-4">
+      <div class="ui-g-12 ui-md-4" *ngIf="newInventor.isCar !==1">
         <div class="ui-inputgroup">
           <table style="width: 100%; border-collapse: collapse" >
             <tr >
@@ -417,6 +442,11 @@
           </table>
         </div>
       </div>
+
+      <div class="ui-g-12 ui-md-4" *ngIf="newInventor.isCar ===1">
+        <p>ვინკოდი</p>
+        <input type="text" pInputText style="width:100%;height: 35px;" [(ngModel)]="newInventor.vin" [ngClass]="{ 'red':if_error(formErrors,'vin')?'1px solid red': '' }"/>
+      </div>
       <div class="ui-g-12 ui-md-3" >
         <p>განზომილების ერთეული</p>
         <div class="ui-inputgroup" >
@@ -435,19 +465,9 @@
       <div class="ui-g-8 ui-g-nopad">
         <div class="ui-g-4" >
           <p>დასახელება</p>
-
           <p-autoComplete   [ngModelOptions]="{standalone: true}"  [(ngModel)]="newInventor.fullname"    [ngClass]="{ 'red':if_error(formErrors,'fullname')?'1px solid red': '' }" [ngClass]="{ 'red':errors.name?'1px solid red': '' }"   field="name" [size]="30"
                             placeholder="დასახელება" [minLength]="1"  (ngModelChange)="onKeyUp($event)"  (onSelect)="selectedName()" [suggestions]="filteredInventors" >
           </p-autoComplete>
-
-        </div>
-        <div class="ui-g-4">
-          <p>ქარხნული ნომერი</p>
-          <input type="text" pInputText style="width:100%;height: 35px;" [(ngModel)]="newInventor.factoryNumber" [ngClass]="{ 'red':if_error(formErrors,'factoryNumber')?'1px solid red': '' }"/>
-        </div>
-        <div class="ui-g-4">
-          <p>ინვენტარის ტიპი</p>
-          <p-dropdown [options]="itemTypes"  [ngClass]="{ 'red':if_error(formErrors,'selectedItemType')?'1px solid red': '' }" placeholder="ტიპი" optionLabel="name" [showClear]="true" [(ngModel)]="newInventor.selectedItemType" ></p-dropdown>
         </div>
         <div class="ui-g-4">
           <p>მარკა</p>
@@ -463,6 +483,29 @@
             </tr>
           </table>
         </div>
+        <div class="ui-g-4">
+          <p>მოდელი</p>
+          <table>
+            <tr>
+              <td>
+                <p-autoComplete [disabled]="!newInventor.selectedMaker"  [ngClass]="{ 'red':if_error(formErrors,'selectedModel')?'1px solid red': '' }" [suggestions]="ItemData" (completeMethod)="filterItemSingle($event, 'model')" field="name" [size]="30"
+                                placeholder="მოდელი" [minLength]="1" [(ngModel)]="newInventor.selectedModel"></p-autoComplete>
+              </td>
+              <td>
+                <p-button icon="pi pi-plus" (click)="newRecordDialog('model', newInventor.selectedModel)"></p-button>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <div class="ui-g-4">
+          <p>{{ newInventor.isCar !==1 ? 'ქარხნული ნომერი': 'სახელმწიფო ნომერი' }}</p>
+          <input type="text" pInputText style="width:100%;height: 35px;" [(ngModel)]="newInventor.factoryNumber" [ngClass]="{ 'red':if_error(formErrors,'factoryNumber')?'1px solid red': '' }"/>
+        </div>
+        <div class="ui-g-4">
+          <p>ინვენტარის ტიპი</p>
+          <p-dropdown [options]="itemTypes"  [ngClass]="{ 'red':if_error(formErrors,'selectedItemType')?'1px solid red': '' }" placeholder="ტიპი" optionLabel="name" [showClear]="true" [(ngModel)]="newInventor.selectedItemType" ></p-dropdown>
+        </div>
+
         <div class="ui-g-4">
           <p>მიმწოდებელი</p>
           <table>
@@ -480,32 +523,16 @@
         <div class="ui-g-4">
           <p>ინვენტარის სტატუსი</p>
           <p-dropdown [ngClass]="{ 'red':if_error(formErrors,'selectedItemStatus')?'1px solid red': '' }" [options]="itemStatus"  placeholder="სტატუსი" optionLabel="name" [showClear]="true" [(ngModel)]="newInventor.selectedItemStatus"></p-dropdown>
+        </div>
+        <div class="ui-g-4">
+          <p>სასაქონლო ზედნადები</p>
+          <input type="text" pInputText style="width:100%;height: 35px;"  [(ngModel)]="newInventor.invoice"   [ngClass]="{ 'red':if_error(formErrors,'invoice')?'1px solid red': '' }" />
+        </div>
+        <div class="ui-g-4">
+          <p>ინსპექტირების დასკვნის ნომერი</p>
+          <input type="text" pInputText style="width:100%;height: 35px;" [(ngModel)]="newInventor.inspectionNumber" [ngClass]="{ 'red':if_error(formErrors,'inspectionNumber')?'1px solid red': '' }"/>
+        </div>
 
-        </div>
-        <div class="ui-g-12">
-          <div class="ui-g-4">
-            <p>მოდელი</p>
-            <table>
-              <tr>
-                <td>
-                  <p-autoComplete [disabled]="!newInventor.selectedMaker"  [ngClass]="{ 'red':if_error(formErrors,'selectedModel')?'1px solid red': '' }" [suggestions]="ItemData" (completeMethod)="filterItemSingle($event, 'model')" field="name" [size]="30"
-                                  placeholder="მოდელი" [minLength]="1" [(ngModel)]="newInventor.selectedModel"></p-autoComplete>
-                </td>
-                <td>
-                  <p-button icon="pi pi-plus" (click)="newRecordDialog('model', newInventor.selectedModel)"></p-button>
-                </td>
-              </tr>
-            </table>
-          </div>
-          <div class="ui-g-4">
-            <p>სასაქონლო ზედნადები</p>
-            <input type="text" pInputText style="width:100%;height: 35px;"  [(ngModel)]="newInventor.invoice"   [ngClass]="{ 'red':if_error(formErrors,'invoice')?'1px solid red': '' }" />
-          </div>
-          <div class="ui-g-4">
-            <p>ინსპექტირების დასკვნის ნომერი</p>
-            <input type="text" pInputText style="width:100%;height: 35px;" [(ngModel)]="newInventor.inspectionNumber" [ngClass]="{ 'red':if_error(formErrors,'inspectionNumber')?'1px solid red': '' }"/>
-          </div>
-        </div>
         <div class="ui-g-12">
           <div class="ui-g-4" >
             <p>ერთეულის ფასი</p>
@@ -540,8 +567,8 @@
               <th>ფასი</th>
               <th>რაოდენობა</th>
               <th [width]="200">განზ.ერთ</th>
-              <th>შტრიხკოდი</th>
-              <th>ქარხ#</th>
+              <th >{{newInventor.isCar != 1? "შტრიხკოდი":"ვინკოდი"}}</th>
+              <th>{{newInventor.isCar != 1? "ქარხ #":"მანქანის ნომერი"}}</th>
               <th>ჯგუფი</th>
               <th>ტიპი</th>
               <th>სტატუსი</th>
@@ -560,8 +587,9 @@
             <td>{{newInventor.price}}</td>
             <td>{{newInventor.showAmount}}</td>
             <td>{{newInventor.measureUnitName}}</td>
-            <td>{{c.value}}<input type="text" [(ngModel)]="c.barCodeVisualValue" class="input border-0"></td>
-            <td><input type="text" [(ngModel)]="c.factoryNumber" class="input"></td>
+            <td *ngIf="newInventor.isCar != 1">{{c.value}}<input type="text" [(ngModel)]="c.barCodeVisualValue" class="input border-0"></td>
+            <td *ngIf="newInventor.isCar === 1">{{newInventor.vin}}</td>
+            <td><input type="text" [(ngModel)]="newInventor.factoryNumber" class="input"></td>
             <td>{{newInventor.itemGroupName}}</td>
             <td>{{newInventor.selectedItemType.name}}</td>
             <td>{{newInventor.selectedItemStatus.name}}</td>
@@ -691,8 +719,9 @@
     </div>
   </div>
 
-  <p-footer>
+  <p-footer style="width: 100%">
     <span class="lastCode">ბოლო შტრიხკოდი: {{newInventor.fullBarCode}}</span>
+    <span class="lastCode" *ngIf="frustrate" style="margin-left: 400px; font-size: 20px">ბოლო კოდი - {{lastCode}}</span>
     <button style="position: relative; right: 50px" pButton type="button" icon="pi pi-file" label="ფაილები ({{ uploadFiles.length}})" (click)="filesDialog=true"> </button>
     <button  type="button" style="position: relative; top:-2px;" (click)="changeLang()"><img src="./assets/img/icons/{{lang}}.png" width="25" alt=""></button>
     <button type="button" pButton icon="pi pi-save" *ngIf="frustrate && inventorOperation=='new'" (click)="saveNewInventor()" label="შენახვა" ></button>
