--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 5 \2502  @import \"~@coreui/coreui/scss/coreui\";\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   style.scss 5:9  root stylesheet";
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 5 \2502  @import \"~@coreui/coreui/scss/coreui\";\d\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   style.scss 5:9  root stylesheet";
 }
